# voxelizer

./: CMakeLists.txt
ext/include/assimp/: IOSystem.hpp
render/texture/: TextureT.h
shaders/: BuildRotation.glsl  Clear.frag  DefaultRender.frag  DefaultRender.geom  DefaultRender.vert  IsoCopyComponents.comp  IsoRender.frag  IsoRender.vert  brdf.glsl  calcRangeZ.glsl  cast.vert  common.vert  compatibility.glsl  computeBaryCoords.hglsl  cubeCast.frag  default.frag  default.vert  denseClear.comp  denseClear.frag  denseClear.vert  depthVis.frag  gen3Dcoords.vert  idVis.frag  imageAtomicAverageRGBA8.glsl  isoClear.glsl  isoCubeSphereHit.glsl  isoVoxelFetch.glsl  isoVoxelStore.glsl  renderVoxels.frag  renderVoxels.vert  screenCoverTri.vert  screenOverlay.frag  screenTri.vert  sparseClear.vert  sparseNormalize.vert  sparseTransfer.vert  sphereCast.frag  swizzle.glsl  voxelizeFrag.frag  voxelizeFrag.geom  (+8 more)
src/: IsoVoxels.cpp  IsoVoxels.h  Main.cpp  VBOCube.cpp  VBOCube.h  VoxelAsset.cpp  VoxelAsset.h  VoxelBase.cpp  VoxelBase.h  VoxelizerApp.cpp  VoxelizerApp.h  VoxelizerAsset.cpp  VoxelizerAsset.h  stb_image_write.h
